--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -79,6 +79,20 @@
             "options": {
                 "cwd": "C:\\MinGW\\bin"
             }
+        },
+        {
+            "type": "shell",
+            "label": "gcc.exe build active file",
+            "command": "C:\\MinGW\\bin\\gcc.exe",
+            "args": [
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+            ],
+            "options": {
+                "cwd": "C:\\MinGW\\bin"
+            }
         }
     ]
 }
