--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -67,7 +67,7 @@
         {
             "type": "shell",
             "label": "g++.exe build active file",
-            "command": "C:/Program Files/mingw-w64/x86_64-8.1.0-posix-seh-rt_v6-rev0/mingw64/bin/g++.exe",
+            "command": "C:/mingw64/bin/g++.exe",
             "args": [
                 "-g",
                 "${file}",
@@ -75,7 +75,12 @@
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
             "options": {
-                "cwd": "C:/Program Files/mingw-w64/x86_64-8.1.0-posix-seh-rt_v6-rev0/mingw64/bin"
+                "cwd": "C:/mingw64/bin"
+            },
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": true
             }
         }
     ]
